--- a/app/src/main/res/layout/lamp.xml
+++ b/app/src/main/res/layout/lamp.xml
@@ -59,15 +59,32 @@
                     android:layout_height="1dip"
                     android:background="#dddddd" />
 
+                <RelativeLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/OnOff"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:gravity="center_vertical"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
+                        />
+
                 <Switch
                     android:id="@+id/OnOff"
-                    android:layout_width="300dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
-                    android:text="@string/OnOff"
+                    android:layout_alignParentEnd="true"
                     android:textOff="@string/Off"
                     android:textOn="@string/On"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -76,6 +93,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.365" />
+
+                </RelativeLayout>
 
                 <View
                     android:layout_width="fill_parent"
