--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="backgroundColor">@color/white</item>
         <item name="android:textColor">@color/black</item>
         <item name="titleColor">@color/white</item>
+        <item name="android:textColorAlertDialogListItem">@color/dark_grey</item>
     </style>
 
     <style name="AppThemeDark" parent="Theme.AppCompat.Light.NoActionBar">
@@ -19,13 +20,12 @@
         <item name="android:textColorSecondary">@color/white</item>
         <item name="actionMenuTextColor">@color/white</item>
         <item name="android:popupMenuStyle">@style/PopupMenuDark</item>
+        <item name="titleColor">@color/white</item>
         <item name="popupMenuStyle">@style/PopupMenuDark</item>
         <item name="colorAccent">@color/dark_grey</item>
         <item name="backgroundColor">@color/black</item>
         <item name="android:textColor">@color/white</item>
-        <item name="titleColor">@color/white</item>
-
-
+        <item name="android:textColorAlertDialogListItem">@color/white</item>
 
     </style>
 
