--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,8 +2,8 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <CheckBoxPreference
-        android:defaultValue="false"
         android:id="@+id/dark_theme_checkbox"
+        android:defaultValue="false"
         android:key="dark_theme_checkbox"
         android:title="@string/pref_dark_theme" />
     <ListPreference
@@ -19,4 +19,59 @@
         android:entryValues="@array/columns_amount_landscape"
         android:key="columns_amount_landscape"
         android:title="@string/ColumnsAmountLandscape" />
+    <ListPreference
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:defaultValue="@string/Short"
+        android:entries="@array/ArrayInterval"
+        android:entryValues="@array/ArrayInterval"
+        android:key="interval_preference"
+        android:title="@string/Interval" />
+    <PreferenceCategory android:title="@string/activate_dev_not">
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="alarm_preference"
+            android:title="@string/Alarm" />
+        <CheckBoxPreference
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:defaultValue="false"
+            android:key="ac_preference"
+            android:title="@string/Ac" />
+        <CheckBoxPreference
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:defaultValue="false"
+            android:key="blinds_preference"
+            android:title="@string/Blinds" />
+        <CheckBoxPreference
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:defaultValue="false"
+            android:key="door_preference"
+            android:title="@string/Door" />
+        <CheckBoxPreference
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:defaultValue="false"
+            android:key="lamp_preference"
+            android:title="@string/Lamp" />
+        <CheckBoxPreference
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:defaultValue="false"
+            android:key="oven_preference"
+            android:title="@string/Oven" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="refrigerator_preference"
+            android:title="@string/Refrigerator" />
+        <CheckBoxPreference
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:defaultValue="false"
+            android:key="timer_preference"
+            android:title="@string/Timer" />
+    </PreferenceCategory>
 </PreferenceScreen>
