--- a/app/src/main/res/layout/layout_seekbar_thumb.xml
+++ b/app/src/main/res/layout/layout_seekbar_thumb.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="@dimen/seekbar_thumb_size"
         android:layout_height="@dimen/seekbar_thumb_size"
+        android:background="@drawable/ic_favourites_24"
         android:gravity="center"
         android:orientation="vertical">
 
