--- a/app/src/main/res/layout/fragment_devices.xml
+++ b/app/src/main/res/layout/fragment_devices.xml
@@ -23,6 +23,7 @@
         android:id="@+id/devices_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/backgroundColor"/>
+        android:background="?attr/backgroundColor"
+        android:backgroundTint="?attr/backgroundColor"/>
 
 </FrameLayout>
