--- a/app/src/main/res/layout/fragment_recycler.xml
+++ b/app/src/main/res/layout/fragment_recycler.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="50dp"
-        android:background="?attr/backgroundColor"/>
+        android:background="?attr/backgroundColor"
+        android:backgroundTint="?attr/backgroundColor"/>
 
 
 </FrameLayout>
