--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,11 +19,19 @@
             android:minHeight="?attr/actionBarSize"
             app:titleTextColor="?attr/titleColor" />
 
-        <FrameLayout
-            android:id="@+id/main_frame"
+        <android.support.v4.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/swiperefresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/main_toolbar"/>
+            android:layout_below="@+id/main_toolbar">
+
+            <FrameLayout
+                android:id="@+id/main_frame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <include layout="@layout/layout_bottom_navigation"/>
 
