--- a/app/src/main/res/layout-large/activity_home.xml
+++ b/app/src/main/res/layout-large/activity_home.xml
@@ -17,6 +17,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
+            android:theme="@style/AppTheme.ActionBarTheme"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:backgroundTint="?attr/colorPrimary"
@@ -43,6 +44,7 @@
             android:id="@+id/device_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.ActionBarTheme"
             android:background="?attr/colorPrimary"
             android:backgroundTint="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
