--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -8,6 +8,7 @@
         android:id="@+id/activity_fragment_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.ActionBarTheme"
         android:background="?attr/colorPrimary"
         android:backgroundTint="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
