--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,6 +14,7 @@
             android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.ActionBarTheme"
             android:background="?attr/colorPrimary"
             android:backgroundTint="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
