--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,16 @@
         <item name="android:textColorAlertDialogListItem">@color/dark_grey</item>
     </style>
 
+    <style name="AppTheme.ActionBarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <!-- THIS is where you can color the arrow and the overflow button! -->
+        <item name="colorControlNormal">@color/white</item> <!-- sets the color for the back arrow -->
+        <item name="actionOverflowButtonStyle">@style/DotsLightTheme</item> <!-- sets the style for the overflow button -->
+    </style>
+
+    <style name="DotsLightTheme" parent="@style/Widget.AppCompat.ActionButton.Overflow" >
+        <item name="android:tint">@color/white</item>
+    </style>
+
     <style name="AppThemeDark" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/dark_grey</item>
         <item name="colorPrimaryDark">@color/dark_grey_navbar</item>
@@ -26,8 +36,14 @@
         <item name="backgroundColor">@color/black</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorAlertDialogListItem">@color/white</item>
-
+        <item name="colorControlNormal">@color/white</item>
+        <item name="actionOverflowButtonStyle">@style/DotsDarkTheme</item>
     </style>
+
+    <style name="DotsDarkTheme" parent="@style/Widget.AppCompat.ActionButton.Overflow" >
+        <item name="android:tint">@color/white</item>
+    </style>
+
 
 
     <style name="PopupMenuDark" parent="ThemeOverlay.AppCompat.Light">
