--- a/app/src/main/res/layout/ac.xml
+++ b/app/src/main/res/layout/ac.xml
@@ -288,7 +288,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:text="@string/AcMode"
-                            android:textColor="#000000"
+                            android:textColor="@color/black"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintHorizontal_bias="1.0"
                             app:layout_constraintStart_toStartOf="parent"
