--- a/app/src/main/res/layout/fragment_devices.xml
+++ b/app/src/main/res/layout/fragment_devices.xml
@@ -26,4 +26,12 @@
         android:background="?attr/backgroundColor"
         android:backgroundTint="?attr/backgroundColor"/>
 
+    <TextView
+        android:id="@+id/fragment_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text=""
+        android:textSize="20sp" />
+
 </FrameLayout>
