--- a/app/src/main/res/layout/oven.xml
+++ b/app/src/main/res/layout/oven.xml
@@ -125,6 +125,12 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <TextView
+                        android:id="@+id/OvenTempStat"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:textColor="@color/grey" />
+
                     <SeekBar
                         android:id="@+id/OvenTempSeekBar"
                         android:layout_width="match_parent"
