--- a/app/src/main/res/layout/lamp.xml
+++ b/app/src/main/res/layout/lamp.xml
@@ -132,7 +132,8 @@
                     <SeekBar
                         android:id="@+id/BrightnessLamp"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:max="100"/>
                 </LinearLayout>
 
                 <View
