--- a/app/src/main/res/layout/lamp.xml
+++ b/app/src/main/res/layout/lamp.xml
@@ -167,6 +167,7 @@
                     </LinearLayout>
 
                     <View
+                        android:id="@+id/ColorPickerView"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_marginEnd="8dp"
