--- a/app/src/main/res/layout/blinds.xml
+++ b/app/src/main/res/layout/blinds.xml
@@ -15,85 +15,92 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/DeviceLogo"
-                android:layout_width="174dp"
-                android:layout_height="99dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="78dp"
-                android:layout_marginTop="39dp"
-                android:layout_marginEnd="68dp"
-                android:layout_marginBottom="54dp"
-                android:contentDescription="@string/Blinds"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.889"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.08"
-                app:srcCompat="@drawable/blind" />
-
-        </RelativeLayout>
-
         <ScrollView
             android:id="@+id/ScrollView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:id="@+id/BlindsLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="horizontal">
+                    android:gravity="center">
 
-                    <TextView
-                        android:id="@+id/UpDown"
-                        android:layout_width="93dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:text="@string/UpDown"
-                        android:textColor="#000000"
+                    <ImageView
+                        android:id="@+id/DeviceLogo"
+                        android:layout_width="174dp"
+                        android:layout_height="99dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginStart="78dp"
+                        android:layout_marginTop="39dp"
+                        android:layout_marginEnd="68dp"
+                        android:layout_marginBottom="54dp"
+                        android:contentDescription="@string/Blinds"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.889"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintVertical_bias="0.65" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.08"
+                        app:srcCompat="@drawable/blind" />
 
-                    <RadioGroup
+                </RelativeLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/BlindsLL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
 
-                        <RadioButton
-                            android:id="@+id/UpBut"
-                            android:layout_width="wrap_content"
+                        <TextView
+                            android:id="@+id/UpDown"
+                            android:layout_width="93dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="@string/Up" />
+                            android:layout_marginStart="8dp"
+                            android:text="@string/UpDown"
+                            android:textColor="#000000"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintHorizontal_bias="1.0"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintVertical_bias="0.65" />
 
-                        <RadioButton
-                            android:id="@+id/DownBut"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="@string/Down" />
+                        <RadioGroup
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
 
-                    </RadioGroup>
+                            <RadioButton
+                                android:id="@+id/UpBut"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/Up" />
+
+                            <RadioButton
+                                android:id="@+id/DownBut"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/Down" />
+
+                        </RadioGroup>
 
 
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
