--- a/app/src/main/res/layout/timer.xml
+++ b/app/src/main/res/layout/timer.xml
@@ -153,7 +153,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:background="#009688"
+                            android:background="@color/buttonColor"
                             android:padding="10dp"
                             android:text="@string/Stop"
                             android:textColor="#ffffff"
