--- a/app/src/main/res/menu/up_menu.xml
+++ b/app/src/main/res/menu/up_menu.xml
@@ -11,7 +11,8 @@
     <item
         android:id="@+id/aboutMenu"
         android:title="@string/About"
-        android:icon="@drawable/ic_question" />
+        android:icon="@drawable/ic_question"
+        android:onClick="about_onClick"/>
 
 
 </menu>
